增加安全性验证